Fix modal scrollbar

--- a/web/src/styles/components/_city-switcher.scss
+++ b/web/src/styles/components/_city-switcher.scss
@@ -22,6 +22,6 @@ cc-city-switcher {
 
     .modal-body {
     	max-height: 76vh;
-    	overflow-y: scroll;
+    	overflow: auto;
     }
 }
